    o 26.09.2003: Version 2.1
    o 27.06.2003: Version 2.0
    o 07.03.2003: Version 1.1
    o 06.12.2002: Version 1.0

_____________________________________________________________________________

_____________________________________________________________________________

 Changes from 4.5.1 to 4.5.2
_____________________________________________________________________________

BEAM-976  Time Info displays wrong UTC time
BEAM-974  NullPointerException when importing pins defined by pixel position
BEAM-967  PixelInfoView disregards pin movements if "Snap to selected pin" is selected
BEAM-965  BEAM can not open NOAA-AVHRR Full Resolution Area Coverage (FRAC) Level1B products
BEAM-958  Pixel Info View can block VISAT
BEAM-957  "Search" tab missing VISAT help
BEAM-956  Histogram color lookup tables do not work correctly with CPD files
BEAM-954  The pixel info view updates its display too often
BEAM-945  Landsat reader does not consider the center information in header file
BEAM-910  VISAT module manager does not work under Vista OS (reopened and fixed)
_____________________________________________________________________________

 Changes from 4.5 to 4.5.1
_____________________________________________________________________________

1) New VISAT Features

o Colour manipulation window now indicates rough statistics generated from a
  low-res version of the displayed image. Users can now compute accurate
  statistics on demand.
  Colour palette import will now either
  - try to keep colours assigned to sample values or
  - distribute evenely between sample min/max range.

o Band arithmetic now takes into account no-data values from all bands and
  tie-point grids referenced by the band-math expression (with no loss in
  runtime performance).

2) Complete list of bug fixes and improvements

BEAM-942    VISAT sometimes hangs on startup
BEAM-937    Colour palette sometimes incorrectly imported
BEAM-936 	Layer visibility is not synchronised with tool bar buttons