@@ -12,6 +12,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.5.2:<br/>
+            [BEAM-979] History of recent products incorrect<br/>
             [BEAM-976] Time Info displays wrong UTC time<br/>
             [BEAM-974] NullPointerException when importing pins defined by pixel position<br/>
             [BEAM-960] Module description misplaced in VISAT module manager<br/>
