@@ -34,6 +34,7 @@ _____________________________________________________________________________
  Changes from 4.5.1 to 4.5.2
 _____________________________________________________________________________
 
+BEAM-979  History of recent products incorrect
 BEAM-976  Time Info displays wrong UTC time
 BEAM-974  NullPointerException when importing pins defined by pixel position
 BEAM-967  PixelInfoView disregards pin movements if "Snap to selected pin" is selected
